--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,17 @@ body {
 }
 
 #projects article {
+  user-select: none;
+
   margin: 1rem;
   padding: 1rem;
   border-radius: 1.5rem;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#projects article:hover {
+  cursor: pointer;
 }
 
 a {
