--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@ body {
 
 #projects article {
   user-select: none;
-
-  min-width: 33%;
+  
   width: min-content;
 
   padding: 1rem;
@@ -27,6 +26,8 @@ body {
   box-shadow: 0.2em 0.2em 10px rgba(0, 0, 0, 0.1);
 
   transition: transform 0.1s,box-shadow 0.1s;
+
+  flex-grow: 1;
 }
 
 #projects article:hover {
