--- a/projects/Whack-A-Mole/style.css
+++ b/projects/Whack-A-Mole/style.css
@@ -14,6 +14,7 @@ body {
 
   background-color: #f8fbf4;
   color: #0f1409;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
@@ -26,15 +27,18 @@ h1 {
   padding: 0px;
   text-align: center;
   user-select: none;
+}
 
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+header p{
+  display: block;
+  text-align: center;
 }
 
 main {
   grid-area: main;
 }
 
-p {
+main p {
   position: fixed;
   font-size: 2em;
   user-select: none;
