--- a/projects/TypingFX/style.css
+++ b/projects/TypingFX/style.css
@@ -1,12 +1,40 @@
+:root {
+  --text: #ebefec;
+  --background: #101813;
+  --primary: #abcdb7;
+  --secondary: #346646;
+  --accent: #63bc83;
+}
+
 body {
   width: 100vw;
   height: 100vh;
   margin: 10%;
+
+  background-color: var(--background);
+  color: var(--text);
 }
 
 /* area in which we want the particles to appear, and hide if are out of it*/
 body {
   overflow: hidden;
+}
+
+input{
+    background-color: var(--primary);
+    color: var(--background);
+    border: none;
+    padding: 0.5em;
+    font-size: 1em;
+    border-radius: 1em;
+
+    box-shadow: 0.1em 0.1em 0.5em var(--accent);
+}
+
+input:focus{
+    outline: none;
+    background-color: var(--secondary);
+    color: var(--text);
 }
 
 @keyframes travel {
