implemented image left layout  + alternative version

--- a/projects/HtmlPresentation/css/slideStyles.css
+++ b/projects/HtmlPresentation/css/slideStyles.css
@@ -20,7 +20,7 @@ body{
 }
 
 #slideImage{
-    width: 190%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -59,4 +59,27 @@ LAYOUTS
       "prevButton nextButton"; 
 }
 
+.image-left {
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: min-content 1fr; 
+    gap: 1em 1em; 
+    grid-template-areas: 
+      "slideImage slideTitle"
+      "slideImage slideContent"
+      "prevButton nextButton"; 
+}
+
+.image-left-alt {
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: min-content 1fr; 
+    gap: 1em 1em; 
+    grid-template-areas: 
+      "slideTitle slideTitle"
+      "slideImage slideContent"
+      "prevButton nextButton"; 
+}
   
