implemented image top title left layout

--- a/projects/HtmlPresentation/css/slideStyles.css
+++ b/projects/HtmlPresentation/css/slideStyles.css
@@ -83,3 +83,14 @@ LAYOUTS
       "prevButton nextButton"; 
 }
   
+.image-top-title-left {
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 10em 1fr; 
+    gap: 1em 1em; 
+    grid-template-areas: 
+      "slideImage slideImage"
+      "slideTitle slideContent"
+      "prevButton nextButton"; 
+}
