--- a/projects/HtmlPresentation/css/slideStyles.css
+++ b/projects/HtmlPresentation/css/slideStyles.css
@@ -8,6 +8,8 @@
 
     --primary-font: 'Roboto', sans-serif;
     --secondary-font: 'Open Sans', sans-serif;
+
+    
 }
 
 body{
@@ -16,7 +18,6 @@ body{
     background-color: var(--background);
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 main{
@@ -28,6 +29,10 @@ main{
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    box-sizing: border-box;
+    border: 0.25em solid var(--primary);
+    border-radius: 1em;
 }
 
 #slideTitle{
